added some functionalities

--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
             <input id="text-color-input" type="color">
             <label for="color">BG-color</label>
             <input id="bg-color-input" type="color">
-            <button><i class="fa-solid fa-cloud-arrow-down fa-xl"></i></button>
-            <button><i class="fa-solid fa-cloud-arrow-up fa-xl"></i></button>
+            <button onclick="downloadMatrix()"><i class="fa-solid fa-cloud-arrow-down fa-xl"></i></button>
+            <input id="upload-input" type="file" accept=".json"><i class="fa-solid fa-cloud-arrow-up fa-xl"></i>
 
             <button id="add-sheet"><i class="fa-solid fa-file-circle-plus fa-xl"></i></button>
         </div>
